--- a/local/docker-compose.yaml
+++ b/local/docker-compose.yaml
@@ -5,11 +5,14 @@ services:
     image: &nuts_image nutsfoundation/nuts-node:master
     environment:
       NUTS_CONFIGFILE: /opt/nuts/nuts.yaml
+      NUTS_AUTH_PUBLICURL: ${NUTS_AUTH_PUBLICURL}
     volumes:
       - "./vendorA/nuts.yaml:/opt/nuts/nuts.yaml"
       - "./truststore.pem:/opt/nuts/truststore.pem"
       - "./vendorA/certificate.pem:/opt/nuts/certificate.pem"
-      - "./vendorA/data/irma:/opt/nuts/irma:ro"
+      - "./vendorA/data/node:/opt/nuts/data:rw"
+    ports:
+      - 1323:1323
   vendorA-admin:
     image: &admin_image nutsfoundation/nuts-registry-admin-demo:master
     volumes:
@@ -39,7 +42,7 @@ services:
       - "./vendorB/nuts.yaml:/opt/nuts/nuts.yaml"
       - "./truststore.pem:/opt/nuts/truststore.pem"
       - "./vendorB/certificate.pem:/opt/nuts/certificate.pem"
-      - "./vendorB/data/irma:/opt/nuts/irma:ro"
+      - "./vendorB/data/node:/opt/nuts/data:rw"
   vendorB-admin:
     image: *admin_image
     volumes:
