--- a/local/vendorA/nuts.yaml
+++ b/local/vendorA/nuts.yaml
@@ -1,9 +1,10 @@
-datadir: /opt/nuts
+datadir: /opt/nuts/data
 network:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate.pem
   certkeyfile: /opt/nuts/certificate.pem
   bootstrapnodes: vendorB-nuts:5555
-auth:
-  irma:
-    autoupdateschemas: false
+http:
+  default:
+    cors:
+      origin: "*"
