--- a/local/makefile
+++ b/local/makefile
@@ -5,3 +5,8 @@ run:
 
 reset:
 	./reset.sh
+
+update:
+	docker pull nutsfoundation/nuts-node:master
+	docker pull nutsfoundation/nuts-registry-admin-demo:master
+	docker pull nutsfoundation/nuts-demo-ehr:main
