--- a/local/vendorB/nuts.yaml
+++ b/local/vendorB/nuts.yaml
@@ -1,4 +1,5 @@
 datadir: /opt/nuts/data
+strictmode: false
 network:
   truststorefile: /opt/nuts/truststore.pem
   certfile: /opt/nuts/certificate.pem
